cabal-version:      2.4
name:               gameJam
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: GPL-V3

author: pavenpaven

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gameJam
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Game
                      Menu

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.7.0.0
                    , sdl2
                    , sdl2-ttf
                    , sdl2-mixer
		    , random
                    , bytestring
                    , vector
                    , directory
                    , text
                    , transformers
                    , mtl
                    , aeson
    hs-source-dirs:   src
    default-language: Haskell2010
